--- a/Question2.html
+++ b/Question2.html
@@ -1,3 +1,4 @@
+<!--Create a static web page which defines all text formatting tags of HTML in tabular format.-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
